--- a/packages.bib
+++ b/packages.bib
@@ -3,28 +3,28 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2017},
+  year = {2018},
   url = {https://www.R-project.org/},
 }
 @Manual{R-bindrcpp,
   title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
   author = {Kirill Müller},
-  year = {2017},
-  note = {R package version 0.2},
+  year = {2018},
+  note = {R package version 0.2.2},
   url = {https://CRAN.R-project.org/package=bindrcpp},
 }
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  note = {R package version 0.7.12},
-  url = {https://github.com/rstudio/bookdown},
   year = {2018},
+  note = {R package version 0.7},
+  url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
-  year = {2017},
-  note = {R package version 0.7.4},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2018},
+  note = {R package version 0.7.6},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-Ecdat,
@@ -94,20 +94,20 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang},
   year = {2018},
-  note = {R package version 1.9},
+  note = {R package version 1.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
-@Manual{R-tibble,
-  title = {tibble: Simple Data Frames},
-  author = {Kirill Müller and Hadley Wickham},
+@Manual{R-ScPoEconometrics,
+  title = {ScPoEconometrics: ScPoEconometrics},
+  author = {Florian Oswald},
   year = {2018},
-  note = {R package version 1.4.2},
-  url = {https://CRAN.R-project.org/package=tibble},
+  note = {R package version 0.1.2},
+  url = {https://github.com/ScPoEcon/ScPoEconometrics},
 }
 @Manual{R-tidyr,
   title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
   author = {Hadley Wickham and Lionel Henry},
   year = {2018},
-  note = {R package version 0.8.0},
+  note = {R package version 0.8.1},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
